@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-03T08:13:25Z",
-  "count_outdated" : 372,
-  "uniques_outdated" : 201,
-  "count" : 396,
+  "timestamp" : "2022-07-04T01:10:18Z",
+  "count_outdated" : 374,
+  "uniques_outdated" : 202,
+  "count" : 398,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
